--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
 /*  your css code here. If applicable */
 
-nav{
+.container{
 	background-color:#D3D3D3;
 	padding:10px;
 	
 }
+ul{
+	display:flex
+}
+
 li{
 	display:inline;
 	margin-right:1rem;
